feat: redis 구조 수정 및 필터링 api